--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "weather-react-icons": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
